# ibis-kedro-poc

./: .gitignore  README.md  pyproject.toml
conf/base/: catalog.yml  credentials.yml  parameters.yml
data/01_raw/: test_db.duckdb
docs/source/: conf.py  index.rst
notebooks/: 230604-initial-testing.ipynb
src/: requirements.txt  setup.py
src/ibis_kedro_poc/: __init__.py  hooks.py  settings.py
src/ibis_kedro_poc/extras/datasets/lazy_load/: lazy_load_sql_dataset.py
src/ibis_kedro_poc/pipelines/: ingest_nodes.py  ingest_pipeline.py
src/tests/: test_run.py
