[project]
name = ""
version = ""
description = ""
authors = [{ name = "Iñigo Hidalgo Rey", email = "inigohrey@gmail.com" }]
dependencies = [
    "kedro-ibis-dataset==0.0.6",
    "pandas",
    "kedro==0.17.1",
    "duckdb",
    "polars",
    "ibis-framework[duckdb,mssql]",
    # pin non-bugged dynaconf
    "dynaconf==3.1.5",
]
requires-python = ">=3.8,<3.9"
license = { text = "MIT" }

[tool.kedro]
package_name = "ibis_kedro_poc"
project_name = "Ibis Kedro PoC"
project_version = "0.17.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88
known_third_party = "kedro"

[tool.pytest.ini_options]
addopts = """
--cov-report term-missing \
--cov src/ibis_kedro_poc -ra"""


[tool.pdm.dev-dependencies]
dev = [
    "kedro-viz==4.6.0",
]



[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
